# omp-launcher-classic

./: .editorconfig  .gitignore  CONTRIBUTING.md  NOTICE.md  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build-win64.yml  dependency-review.yml  quality.yml  release.yml
inject_helper/: Cargo.toml
inject_helper/src/: main.rs
local/: build_omp_launcher_classic_in_devbuild.sh  build_omp_launcher_classic_setup_windows_in_devbuild.sh  build_omp_launcher_classic_windows_in_devbuild.sh
nsis/: omp-launcher-classic-setup.nsi
omp-launcher-classic/: CMakeLists.txt  app.rc  main.cpp  resources.qrc
