[package]
name = "omp-launcher-classic-inject-helper"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
publish = false

[dependencies]
winapi = { version = "0.3.9", features = ["handleapi", "libloaderapi", "memoryapi", "minwindef", "processthreadsapi", "psapi", "synchapi", "winbase", "winnt"] }
